force-app/main/default/objects/ExamSession__c/ExamSession__c.object-meta.xml
<CustomObject>
    <label>Exam Session</label>
    <nameField>
        <label>Exam Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exam Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>