force-app/main/default/objects/ExamSession__c/fields/ExamSessionLog__c.field-meta.xml
<CustomField>
    <fullName>ExamSessionLog__c</fullName>
    <label>Exam Session Log</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>