force-app/main/default/objects/ExamSession__c/fields/MinPassRate__c.field-meta.xml
<CustomField>
    <fullName>MinPassRate__c</fullName>
    <label>Minimal Pass Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>