force-app/main/default/objects/ExamSession__c/fields/Passed__c.field-meta.xml
<CustomField>
    <fullName>Passed__c</fullName>
    <formula>Summary__c &gt; MinPassRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passed</label>
    <type>Checkbox</type>
</CustomField>