force-app/main/default/objects/ExamSession__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>