force-app/main/default/objects/ExamSession__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>